--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1300px;
+  width: 100%;
   margin: 0 auto;
 }
 
