--- a/style.css
+++ b/style.css
@@ -696,6 +696,17 @@ textarea {
 #mobile-navBar {
   display: none;
 }
+.comment-input-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.comment-input-wrapper input {
+  width: 80%;
+}
+.comment-btn i {
+  font-size: 20px;
+}
 @media (max-width: 600px) {
   .hero h2 {
     font-size: 24px;
