--- a/style.css
+++ b/style.css
@@ -708,7 +708,8 @@ textarea {
 }
 .comment-btn i {
   font-size: 30px;
-  color: rgb(50, 173, 221);
+  color: var(--accent-blue);
+  cursor: pointer;
 }
 .comment-btn {
   background-color: transparent;
@@ -717,7 +718,7 @@ textarea {
   transition: transform 0.5s ease;
 }
 .comment-btn:hover {
-  transform: translateY(-2px);
+  transform: translateY(-7px);
 }
 @media (max-width: 600px) {
   .hero h2 {
