check if i can change the input background color to look good

--- a/style.css
+++ b/style.css
@@ -705,6 +705,7 @@ textarea {
 }
 .comment-input-wrapper input {
   width: 80%;
+  background-color: skyblue;
 }
 .comment-btn i {
   font-size: 30px;
