Finish styling the comment section( just input and button only)

--- a/style.css
+++ b/style.css
@@ -705,7 +705,12 @@ textarea {
 }
 .comment-input-wrapper input {
   width: 80%;
-  background-color: skyblue;
+  background-color: rgb(246, 249, 252);
+  border-bottom: 1px solid rgb(70, 148, 238);
+  font-weight: 600;
+}
+.comment-input-wrapper input:focus {
+  border-bottom: 1px solid rgb(81, 163, 240);
 }
 .comment-btn i {
   font-size: 30px;
