implementing a feature that makes the comment hidden until the button is being clicked

--- a/style.css
+++ b/style.css
@@ -701,6 +701,7 @@ textarea {
   flex-direction: row;
   gap: 20px;
   justify-content: center;
+  margin-top: 15px;
   align-items: center;
 }
 .comment-input-wrapper input {
