--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ textarea {
   margin-bottom: 12px;
 }
 
+.btn-primary:hover {
+  background-color: blue;
+}
+
 .btn-secondary {
   background-color: transparent;
   border: 1px solid var(--border-color);
