keep styling the image div

--- a/style.css
+++ b/style.css
@@ -190,8 +190,13 @@ textarea {
   justify-content: center;
   padding: 12px 8px;
   margin-top: 20px;
+  position: relative;
   margin-bottom: 20px;
   height: 250px;
+}
+.eidtimage image {
+  position: absolute;
+  bottom: 20px;
 }
 .edit-profile {
   padding: 12px 8px;
